[tool.poetry]
name = "pachca-bot"
version = "0.1.0"
description = ""
authors = ["Sergey Postnikov <ser.post2017@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.27.2"
pydantic = "^2.9.2"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
plotly = "^5.24.1"
environs = "^11.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
